--- a/package.json
+++ b/package.json
@@ -106,10 +106,15 @@
     "chai": "^4.3.0",
     "del": "^6.0.0",
     "eslint": "^7.20.0",
+    "get-stream": "^6.0.0",
     "mocha": "^8.3.0",
     "mock-stdin": "^1.0.0",
+    "node-fetch": "^2.6.1",
+    "pixelmatch": "^5.2.1",
     "playwright": "^1.8.1",
-    "rollup": "^2.39.0"
+    "pngjs": "^6.0.0",
+    "rollup": "^2.39.0",
+    "tar-stream": "^2.2.0"
   },
   "engines": {
     "node": ">=10.13.0"
